@@ -128,13 +128,15 @@ static void intel_process_address( struct intel_record *record )
     switch( record->type ) {
         case 2:
             /* 0x1238 -> 0x00012380 */
-            record->address = (record->data[0] << 8) | record->data[1];
+            record->address = ((0xff & record->data[0]) << 8);
+            record->address |= (0xff & record->data[1]);
             record->address *= 16;
             break;
 
         case 4:
             /* 0x1234 -> 0x12340000 */
-            record->address = (record->data[0] << 8) | record->data[1];
+            record->address = ((0xff & record->data[0]) << 8);
+            record->address |= (0xff & record->data[1]);
             record->address <<= 16;
             break;
 
